# Package

./: .eslintrc.js  .gitignore  .pre-commit-config.yaml  .pylintrc  PRIVACY.md  README.md  TERMS.md  cspell.json  remove-lambda-default-dependencies.sh  tsconfig.json
.github/: dependabot.yml
api/: .coveragerc  .gitignore  Pipfile  README.md  api.py  app.py  package-lock.json  package.json  setup.cfg
database/: .coveragerc  .gitignore  README.md  package-lock.json  pyproject.toml  setup.cfg
database/open_alchemy/package/: __init__.py
database/open_alchemy/package/database/: __init__.py
database/open_alchemy/package_database/: __init__.py  config.py  dynamodb.py  factory.py  models.py  types.py
database/tests/: conftest.py  test_.py
database/tests/open_alchemy/package_database/: conftest.py  test_.py  test_database.py  test_models.py
database/tests/open_alchemy/package_database/test_models/credentials/: conftest.py  test_models.py
database/tests/open_alchemy/package_database/test_models/spec/: conftest.py  test_count_customer_models.py  test_create_update_item.py  test_delete_all.py  test_delete_item.py  test_get_item.py  test_get_latest_version.py  test_item_to_info.py  test_list.py  test_list_versions.py  test_models.py
database/tests/open_alchemy/package_database/test_models/test_credentials/: test_models.py
database/tests/open_alchemy/package_database/test_models/test_spec/: conftest.py  test_models.py
index/: .coverage  .coveragerc  .gitignore  Pipfile  README.md  app.py  package-lock.json  setup.cfg
infrastructure/: .gitignore  README.md  (+2 more)
(+159 files in other folders)
