[tool.poetry]
name = "OpenAlchemy.package-database"
version = "0.1.0"
description = "Facade for the OpenAlchemy package database"
authors = ["David Andersson <jdkandersson@users.noreply.github.com>"]
license = "Apache-2.0"
include = ["open_alchemy"]
exclude = ["tests"]
packages = [
    { include = "open_alchemy" },
]

[tool.poetry.dependencies]
python = "^3.8"
pynamodb = "^4.3.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
factory-boy = "^3.2.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
